--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,18 @@ kapt {
 
 dependencies {
     def lifecycle_version = "2.0.0"
+    def room_version = "2.1.0-alpha04"
+
+    // Room library
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // Toothpick library
+    implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.3'
+    implementation 'com.github.stephanenicolas.toothpick:smoothie:1.1.3'
+    kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.3'
+    testImplementation 'com.github.stephanenicolas.toothpick:toothpick-testing:1.1.3'
+
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
@@ -47,8 +59,4 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.3'
-    implementation 'com.github.stephanenicolas.toothpick:smoothie:1.1.3'
-    kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.3'
-    testImplementation 'com.github.stephanenicolas.toothpick:toothpick-testing:1.1.3'
 }
