--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".create.CreateActivity">
+        <activity android:name=".create.CreateActivity"
+                  android:label="@string/title_activity_create">
         </activity>
         <activity
                 android:name=".navigation.NavigationActivity"
